# FirstPerson

./: CMakeLists.txt  README.md
FirstPersonCS/: CMakeLists.txt
FirstPersonCS/deploy/: CopperSpiceTest
FirstPersonCS/lib/: Display3D.cpp  Display3D.hpp  FirstPerson.hpp  GameMaster.cpp  GameMaster.hpp  Map.cpp  Map.hpp
FirstPersonCS/src/: NewMain.cpp  NewMain.cpp.orig  main.cpp
FirstPersonCSLib/: CMakeLists.txt
FirstPersonCSLib/deploy/: CopperSpiceTest
FirstPersonCSLib/lib/: Display3D.cpp  Display3D.hpp  GameMaster.cpp  GameMaster.cpp.orig  GameMaster.hpp  Map.cpp  Player.cpp  Player.hpp
FirstPersonCSLib/src/: NewMain.cpp
src/: main.cpp
